--- a/info.html
+++ b/info.html
@@ -127,7 +127,7 @@
    	<div class="center">
    
    	<p style="margin-top: -5px">Ova stanica je projekat u&ccaron;enika Andrije Suboti&cacute;a iz razreda I - 1 Zrenjaninske gimnazije.</p>
-	<p style="margin-top: -15px">Za vi&scaron;e informacija o &scaron;koli posetite <a href="www.zrenjaninskagimnazija.edu.rs" style="color:#BAB9BB">&scaron;kolski sajt<a>.</p>
+	<p style="margin-top: -15px">Za vi&scaron;e informacija o &scaron;koli posetite <a href="https://www.zrenjaninskagimnazija.edu.rs" style="color:#BAB9BB">&scaron;kolski sajt<a>.</p>
     <p style="margin-top:-15px">Za vi&scaron;e informacija o stanici po&scaron;aljite e-mail na <a href="mailto:asubotic@firemail.cc" style="color:#BAB9BB">ovu adresu</a>.</p>
     
     <img src="gimn.jpg" width="600" height="444">
