--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <div class="center">
     <audio controls>
-    <source src="http://s2.free-shoutcast.com:18152/;stream.mp3" type="audio/mp3">
+    <source src="http://s2ahahahahahahahah.free-shoutcast.com:18152/;stream.mp3" type="audio/mp3">
     <a href="">Vaš internet pretraživač nije podržan. </a>
     </audio>
     </div>
